<resources>
    <string name="app_name">IronMan</string>
    <string name="no_of_clothes">No. of Clothes</string>
    <string name="eg_1">Eg. 1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="rate_cloth">Rate/Cloth</string>
    <string name="rs">RS -</string>
    <string name="save">SAVE</string>
    <string name="button">Button</string>
    <string name="date">DATE</string>
    <string name="history">History</string>
    <string name="monthly_summary">Monthly Summary</string>
    <string name="total">TOTAL</string>
</resources>
