<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/no_of_clothes"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/edittx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txview1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        android:hint="@string/eg_1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txview1"
        android:layout_marginTop="66dp"
        android:elevation="8dp"
        android:text="@string/plus"
        android:textSize="24sp"
        android:onClick="increment"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txview1"
        android:layout_below="@+id/button"
        android:text="@string/minus"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="decrement"/>

    <TextView
        android:id="@+id/txview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txview1"
        android:layout_marginTop="190dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/rate_cloth"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txview1"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/rs"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tx3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/txview2"
        android:layout_marginEnd="82dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/date"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="87dp"
        android:layout_toStartOf="@+id/edittx1"
        android:text="@string/save"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignTop="@+id/bt3"
        android:text="@string/history" />

    <Button
        android:id="@+id/button3"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/monthly_summary" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="143dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:text="@string/total"
        android:textSize="18sp" />
</RelativeLayout>